# mpxx

./: .gitignore  CMakeLists.txt
cmake/: check_demangle.cpp
samples/: mstruct_example.cpp
sources/include/mpxx/mpxx/: define.hpp  mpxx.hpp  msgpack_visitor.hpp  mstruct.hpp  visitors.hpp
sources/include/mpxx/mpxx/tpl/: tpl.hpp  tpl_recursion.hpp
sources/libraries/mpxx/mpxx/: utils.cpp
